fix: Prevent structured citations and footnotes from overlapping in editing bar.

--- a/client/components/FormattingBarControls/formattingBarControls.scss
+++ b/client/components/FormattingBarControls/formattingBarControls.scss
@@ -17,6 +17,7 @@
 			min-height: 26px;
 			&.wide {
 				width: 200px;
+				word-break: break-word;
 			}
 		}
 	}
